force-app/main/default/objects/Financial_Summary__c/Financial_Summary__c.object-meta.xml
<CustomObject>
    <label>Financial Summary</label>
    <nameField>
        <label>Financial Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>