force-app/main/default/objects/Financial_Summary__c/fields/Capital_Expenditure__c.field-meta.xml
<CustomField>
    <fullName>Capital_Expenditure__c</fullName>
    <label>Capital Expenditure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>