force-app/main/default/objects/Financial_Summary__c/fields/Capital_Work_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Capital_Work_In_Progress__c</fullName>
    <label>Capital Work In Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>