force-app/main/default/objects/Financial_Summary__c/fields/Cash_And_Bank_Balance__c.field-meta.xml
<CustomField>
    <fullName>Cash_And_Bank_Balance__c</fullName>
    <description>Cash And Bank Balance</description>
    <label>Cash And Bank Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>