force-app/main/default/objects/Financial_Summary__c/fields/cash_flow_statement_at_end__c.field-meta.xml
<CustomField>
    <fullName>cash_flow_statement_at_end__c</fullName>
    <description>Cash and cash equivalents cash flow statement at end of period</description>
    <label>cash flow statement at end</label>
    <length>100</length>
    <type>Text</type>
</CustomField>