force-app/main/default/objects/Financial_Summary__c/fields/cashAndCashEquivalentsCashFlowStatementA__c.field-meta.xml
<CustomField>
    <fullName>cashAndCashEquivalentsCashFlowStatementA__c</fullName>
    <description>Cash and cash equivalents cash flow statement at beginning of period</description>
    <label>Cash flow statement at beginning</label>
    <length>100</length>
    <type>Text</type>
</CustomField>