force-app/main/default/objects/Financial_Summary__c/fields/cashFlowsFromUsedInFinancingActivities__c.field-meta.xml
<CustomField>
    <fullName>cashFlowsFromUsedInFinancingActivities__c</fullName>
    <description>Net cash flows from (used in) financing activities</description>
    <label>Net cash flows from (used in) financing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>