force-app/main/default/objects/Financial_Summary__c/fields/cashFlowsFromUsedInInvestingActivities__c.field-meta.xml
<CustomField>
    <fullName>cashFlowsFromUsedInInvestingActivities__c</fullName>
    <description>Net cash flows from (used in) investing activities</description>
    <label>Net cash flows from (used in) investing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>