force-app/main/default/objects/Financial_Summary__c/fields/cashFlowsFromUsedInOperatingActivities__c.field-meta.xml
<CustomField>
    <fullName>cashFlowsFromUsedInOperatingActivities__c</fullName>
    <description>Net cash flows from (used in) operating activities</description>
    <label>Net cash flows from (used in) operating</label>
    <length>100</length>
    <type>Text</type>
</CustomField>