force-app/main/default/objects/Financial_Summary__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Summaries</relationshipLabel>
    <relationshipName>Financial_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>