force-app/main/default/objects/Financial_Summary__c/fields/Date_of_incorporation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_incorporation__c</fullName>
    <description>registrationDateOfCompany</description>
    <label>Date of incorporation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>