force-app/main/default/objects/Financial_Summary__c/fields/debtsDueDirExSix__c.field-meta.xml
<CustomField>
    <fullName>debtsDueDirExSix__c</fullName>
    <label>Debt due by directors/ others officers o</label>
    <length>100</length>
    <type>Text</type>
</CustomField>