force-app/main/default/objects/Financial_Summary__c/fields/debtsDueDirWithSix__c.field-meta.xml
<CustomField>
    <fullName>debtsDueDirWithSix__c</fullName>
    <description>Debt due by directors/others officers of the company within six months</description>
    <label>Debt due by directors within 6 months</label>
    <length>100</length>
    <type>Text</type>
</CustomField>