force-app/main/default/objects/Financial_Summary__c/fields/Deferred_Tax_Liablitiy__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Tax_Liablitiy__c</fullName>
    <description>Deferred Tax Liablitiy</description>
    <label>Deferred Tax Liablitiy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>