force-app/main/default/objects/Financial_Summary__c/fields/Depreciation_And_Amortisation__c.field-meta.xml
<CustomField>
    <fullName>Depreciation_And_Amortisation__c</fullName>
    <description>Depreciation And Amortisation</description>
    <label>Depreciation And Amortisation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>