force-app/main/default/objects/Financial_Summary__c/fields/doubtfulExSix__c.field-meta.xml
<CustomField>
    <fullName>doubtfulExSix__c</fullName>
    <description>Doubtful, exceeding six months</description>
    <label>Doubtful, exceeding six months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>