force-app/main/default/objects/Financial_Summary__c/fields/doubtfulWithSix__c.field-meta.xml
<CustomField>
    <fullName>doubtfulWithSix__c</fullName>
    <description>Doubtful within six months</description>
    <label>Doubtful within six months</label>
    <length>100</length>
    <type>Text</type>
</CustomField>