force-app/main/default/objects/Financial_Summary__c/fields/Earnings_Before_Interest_Depreciation__c.field-meta.xml
<CustomField>
    <fullName>Earnings_Before_Interest_Depreciation__c</fullName>
    <description>Earnings Before Interest Depreciation &amp; Amortisation</description>
    <label>Earnings Before Interest Depreciation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>