force-app/main/default/objects/Financial_Summary__c/fields/Earnings_Before_Interest_Taxation__c.field-meta.xml
<CustomField>
    <fullName>Earnings_Before_Interest_Taxation__c</fullName>
    <label>Earnings Before Interest &amp; Taxation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>