force-app/main/default/objects/Financial_Summary__c/fields/EBITDA_Growth__c.field-meta.xml
<CustomField>
    <fullName>EBITDA_Growth__c</fullName>
    <label>EBITDA Growth</label>
    <length>100</length>
    <type>Text</type>
</CustomField>