force-app/main/default/objects/Financial_Summary__c/fields/EBITDA_Margin__c.field-meta.xml
<CustomField>
    <fullName>EBITDA_Margin__c</fullName>
    <label>EBITDA Margin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>