force-app/main/default/objects/Financial_Summary__c/fields/Effective_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Effective_Tax_Rate__c</fullName>
    <label>Effective Tax Rate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>