force-app/main/default/objects/Financial_Summary__c/fields/entityEmailId__c.field-meta.xml
<CustomField>
    <fullName>entityEmailId__c</fullName>
    <description>Email id of the company</description>
    <label>Email id of the company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>