force-app/main/default/objects/Financial_Summary__c/fields/entityId__c.field-meta.xml
<CustomField>
    <fullName>entityId__c</fullName>
    <description>Corporate identity number (CIN) of company</description>
    <label>Corporate identity number of company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>