force-app/main/default/objects/Financial_Summary__c/fields/entityName__c.field-meta.xml
<CustomField>
    <fullName>entityName__c</fullName>
    <description>Name of the company</description>
    <label>Name of the company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>