force-app/main/default/objects/Financial_Summary__c/fields/Exceptional_Items__c.field-meta.xml
<CustomField>
    <fullName>Exceptional_Items__c</fullName>
    <label>Exceptional Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>