force-app/main/default/objects/Financial_Summary__c/fields/Free_Cash_Flow__c.field-meta.xml
<CustomField>
    <fullName>Free_Cash_Flow__c</fullName>
    <label>Free Cash Flow</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>