force-app/main/default/objects/Financial_Summary__c/fields/Interest_Cost__c.field-meta.xml
<CustomField>
    <fullName>Interest_Cost__c</fullName>
    <label>Interest Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>