force-app/main/default/objects/Financial_Summary__c/fields/Interest_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Interest_Coverage__c</fullName>
    <label>Interest Coverage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>