force-app/main/default/objects/Financial_Summary__c/fields/Net_Debt_To_Equity__c.field-meta.xml
<CustomField>
    <fullName>Net_Debt_To_Equity__c</fullName>
    <label>Net Debt To Equity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>