force-app/main/default/objects/Financial_Summary__c/fields/Net_increase_decrease_in_cash_and_cash__c.field-meta.xml
<CustomField>
    <fullName>Net_increase_decrease_in_cash_and_cash__c</fullName>
    <description>Net increase (decrease) in cash and cash equivalents</description>
    <label>Net increase (decrease) in cash and cash</label>
    <length>100</length>
    <type>Text</type>
</CustomField>