force-app/main/default/objects/Financial_Summary__c/fields/Net_Operating_Income__c.field-meta.xml
<CustomField>
    <fullName>Net_Operating_Income__c</fullName>
    <description>Net Operating Income</description>
    <label>Net Operating Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>