force-app/main/default/objects/Financial_Summary__c/fields/Net_Operating_Income_Growth__c.field-meta.xml
<CustomField>
    <fullName>Net_Operating_Income_Growth__c</fullName>
    <label>Net Operating Income Growth</label>
    <length>100</length>
    <type>Text</type>
</CustomField>