force-app/main/default/objects/Financial_Summary__c/fields/Net_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Net_Profit_Margin__c</fullName>
    <label>Net Profit Margin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>