force-app/main/default/objects/Financial_Summary__c/fields/netTrdRecExSix__c.field-meta.xml
<CustomField>
    <fullName>netTrdRecExSix__c</fullName>
    <description>Net trade receivables exceeding six months</description>
    <label>Net trade receivables exceeding 6 months</label>
    <length>100</length>
    <type>Text</type>
</CustomField>