force-app/main/default/objects/Financial_Summary__c/fields/netTrdRecWithSix__c.field-meta.xml
<CustomField>
    <fullName>netTrdRecWithSix__c</fullName>
    <description>Net trade receivables within six months</description>
    <label>Net trade receivables within six months</label>
    <length>100</length>
    <type>Text</type>
</CustomField>