force-app/main/default/objects/Financial_Summary__c/fields/Non_controlling_interest__c.field-meta.xml
<CustomField>
    <fullName>Non_controlling_interest__c</fullName>
    <label>Non controlling interest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>