force-app/main/default/objects/Financial_Summary__c/fields/Other_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Other_Liabilities__c</fullName>
    <label>Other Liabilities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>