force-app/main/default/objects/Financial_Summary__c/fields/Profit_Loss_Before_Tax__c.field-meta.xml
<CustomField>
    <fullName>Profit_Loss_Before_Tax__c</fullName>
    <label>Profit Loss Before Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>