force-app/main/default/objects/Financial_Summary__c/fields/propertyPlantAndEquipment__c.field-meta.xml
<CustomField>
    <fullName>propertyPlantAndEquipment__c</fullName>
    <description>Net Block of Property Plant and Equipment</description>
    <label>Net Block of Property Plant  &amp; Equipment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>