force-app/main/default/objects/Financial_Summary__c/fields/provisionForBadAndDoubtfulDebtsExSix__c.field-meta.xml
<CustomField>
    <fullName>provisionForBadAndDoubtfulDebtsExSix__c</fullName>
    <description>Provision/allowance for bad and doubtful debts exceeding six months</description>
    <label>allowance for bad and doubtful debts</label>
    <length>100</length>
    <type>Text</type>
</CustomField>