force-app/main/default/objects/Financial_Summary__c/fields/provisionForBadAndDoubtfulDebtsWithSix__c.field-meta.xml
<CustomField>
    <fullName>provisionForBadAndDoubtfulDebtsWithSix__c</fullName>
    <label>Provision/allowance for bad and doubtful</label>
    <length>100</length>
    <type>Text</type>
</CustomField>