force-app/main/default/objects/Financial_Summary__c/fields/regAddOfEntity__c.field-meta.xml
<CustomField>
    <fullName>regAddOfEntity__c</fullName>
    <description>Registered Address Of Company</description>
    <label>Registered Address Of Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>