force-app/main/default/objects/Financial_Summary__c/fields/Reserves_And_Surplus__c.field-meta.xml
<CustomField>
    <fullName>Reserves_And_Surplus__c</fullName>
    <description>Reserves And Surplus</description>
    <label>Reserves And Surplus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>