force-app/main/default/objects/Financial_Summary__c/fields/Return_On_Capital_Employed__c.field-meta.xml
<CustomField>
    <fullName>Return_On_Capital_Employed__c</fullName>
    <label>Return On Capital Employed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>