force-app/main/default/objects/Financial_Summary__c/fields/Return_On_Equity__c.field-meta.xml
<CustomField>
    <fullName>Return_On_Equity__c</fullName>
    <label>Return On Equity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>