force-app/main/default/objects/Financial_Summary__c/fields/securedGoodExSix__c.field-meta.xml
<CustomField>
    <fullName>securedGoodExSix__c</fullName>
    <description>Secured, considered good exceeding six months</description>
    <label>Secured considered good exceeding 6month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>