force-app/main/default/objects/Financial_Summary__c/fields/securedGoodWithSix__c.field-meta.xml
<CustomField>
    <fullName>securedGoodWithSix__c</fullName>
    <label>Secured, considered good within six mont</label>
    <length>100</length>
    <type>Text</type>
</CustomField>