force-app/main/default/objects/Financial_Summary__c/fields/Share_Capital__c.field-meta.xml
<CustomField>
    <fullName>Share_Capital__c</fullName>
    <description>Share Capital</description>
    <label>Share Capital</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>