force-app/main/default/objects/Financial_Summary__c/fields/Share_of_Associates_Joint_Ventures_and__c.field-meta.xml
<CustomField>
    <fullName>Share_of_Associates_Joint_Ventures_and__c</fullName>
    <description>Share of Associates, Joint Ventures and other Adjustments</description>
    <label>Share of Associates, Joint Ventures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>