force-app/main/default/objects/Financial_Summary__c/fields/Total_Borrowings__c.field-meta.xml
<CustomField>
    <fullName>Total_Borrowings__c</fullName>
    <description>Total Borrowings</description>
    <label>Total Borrowings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>