force-app/main/default/objects/Financial_Summary__c/fields/Total_Equity_And_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Total_Equity_And_Liabilities__c</fullName>
    <description>Total Equity And Liabilities</description>
    <label>Total Equity And Liabilities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>