force-app/main/default/objects/Financial_Summary__c/fields/Total_Investments__c.field-meta.xml
<CustomField>
    <fullName>Total_Investments__c</fullName>
    <label>Total Investments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>