force-app/main/default/objects/Financial_Summary__c/fields/Total_Tax_Expense__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax_Expense__c</fullName>
    <label>Total Tax Expense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>