force-app/main/default/objects/Financial_Summary__c/fields/totTrdRecExSix__c.field-meta.xml
<CustomField>
    <fullName>totTrdRecExSix__c</fullName>
    <description>Total Trade Receivables exceeding six months</description>
    <label>Total Trade Receivable exceeding 6 month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>