force-app/main/default/objects/Financial_Summary__c/fields/totTrdRecWithSix__c.field-meta.xml
<CustomField>
    <fullName>totTrdRecWithSix__c</fullName>
    <description>Total Trade Receivables within six months</description>
    <label>Total Trade Receivables within six month</label>
    <length>100</length>
    <type>Text</type>
</CustomField>