force-app/main/default/objects/Financial_Summary__c/fields/unsecuredGoodExSix__c.field-meta.xml
<CustomField>
    <fullName>unsecuredGoodExSix__c</fullName>
    <label>Unsecured, considered good exceeding six</label>
    <length>100</length>
    <type>Text</type>
</CustomField>