force-app/main/default/objects/Financial_Summary__c/fields/unsecuredGoodWithSix__c.field-meta.xml
<CustomField>
    <fullName>unsecuredGoodWithSix__c</fullName>
    <description>Unsecured, considered good within six months</description>
    <label>Unsecured considered good within 6 month</label>
    <length>100</length>
    <type>Text</type>
</CustomField>