force-app/main/default/objects/Financial_Summary__c/recordTypes/Consolidated_Summary.recordType-meta.xml
<RecordType>
    <fullName>Consolidated_Summary</fullName>
    <active>true</active>
    <label>Consolidated Summary</label>
</RecordType>