force-app/main/default/objects/Financial_Summary__c/recordTypes/Standalone_Summary.recordType-meta.xml
<RecordType>
    <fullName>Standalone_Summary</fullName>
    <active>true</active>
    <label>Standalone Summary</label>
</RecordType>